# ShopifyThemeCleaner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-release.yml
src/: liquid.rs  main.rs  template.rs
