[package]
name = "shopify_theme_cleaner"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { features = ["macros", "rt-multi-thread", "fs"] , version = "1.36.0" }
